--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(bot-core_sdk)
 
-target_include_directories(bot-core_sdk INTERFACE
-    ${CMAKE_SOURCE_DIR}
-    ${CMAKE_SOURCE_DIR}/libs/lua
-)
+add_subdirectory(${CMAKE_SOURCE_DIR}/libs)
+
+add_library(lua::lib ALIAS lua)
