--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(bot-core_sdk)
 
-add_subdirectory(${CMAKE_SOURCE_DIR}/libs)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libs)
 
 add_library(lua::lib ALIAS lua)
