update sdk for new plugin system (coderef-1)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(bot-core_sdk)
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libs)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_library(lua::lib ALIAS lua)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}libs/lua)
